[project]
name = "cartesi"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A Python Framework for Cartesi Distributed Applications"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/prototyp3-dev/python-cartesi"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
